TS-1310 To avoid endless loop on handleReadDone. Thanks Hua Cai (hua_cai@netentsec.com)